--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,10 @@ body {
     justify-content: space-between;
     
 }
-
+.drumwave{
+    margin: auto;
+    width:80%;
+}
 .ui-pictures img{
     max-width:33%;
 }
@@ -50,6 +53,7 @@ header {
 }
 p{
     font-size:1rem;
+    margin-bottom: 2rem;
 }
 l{
     font-size:0.5rem;
@@ -84,7 +88,7 @@ main {
 section {
     padding:1rem;
     color:#333;
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
