--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ body {
 .drumwave{
     margin: auto;
     width:80%;
+    margin-left:0;
 }
 .ui-pictures img{
     max-width:33%;
@@ -112,9 +113,21 @@ section {
     margin-bottom: 3rem;
     margin-left: auto;
     margin-right: auto;
+    
+}
+h1{
+    font-size:2.5rem;
+   
+}
+main h1{
+    color:#333;
+    padding:1rem;
+}
+main{
+    margin-left: auto;
+    margin-right: auto;
     width: 50%;
 }
-
 #hero {
 
    color:#333;
