--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ main{
 #hero {
 
    color:#333;
-    display: flex;
+    
     align-items: flex-start;
     justify-content: space-between;
     gap: 1rem;
@@ -167,4 +167,23 @@ img {
     height: auto; /* Maintains the aspect ratio */
     display: block;
    
+}
+
+
+@media only screen and (max-width: 800px) {
+    main{
+        width: 80%;
+    }
+
+    header{
+        width: 80%;
+    }
+    
+}
+
+@media only screen and (min-width: 800px) {
+    #hero{
+        display: flex;
+    }
+    
 }
