--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,9 @@ l{
 }
 
 #hero p {
-    font-size: 2rem;
-    line-height: 2.4rem;
+   font-size:1.5rem;
+   line-height: 2rem;
+
 }
 nav ul {
     list-style: none;
@@ -110,7 +111,7 @@ main {
 section {
     padding:1rem;
     color:#333;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
     margin-left: auto;
     margin-right: auto;
     
@@ -139,7 +140,7 @@ main{
     padding-bottom: 0;
 }
 
-#myQuilt{
+#case-link{
     border-radius: 20px;
     
 }
@@ -147,7 +148,7 @@ a{
     text-decoration: none;
     color: none;
 }
-#myQuilt:hover{
+#case-link:hover{
     background-color: rgb(238, 236, 236);
 }
 /* Footer Styles */
@@ -186,4 +187,27 @@ img {
         display: flex;
     }
     
+}
+
+.bi  {
+    display: inline-block;
+    padding: 10px;
+    
+    border: none;
+    border-radius: 24px;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+    font-size: 16px;
+}
+
+.about img{
+    border-radius: 50%;
+    height: 20rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
+}
+.bi:hover {
+    background-color: #e0e0e0;
 }
