--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
 body {
     background-color: #FAF9F6;
     font-family: 'Nunito', Arial, sans-serif;
-    line-height: 1.6;
+    line-height: 1.3;
     margin: 0;
     padding: 0;
    
@@ -24,13 +24,7 @@ body {
    
     
 }
-.ui-pictures{
-    padding-top: 10pt;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 2rem;
-    
-}
+
 
 .case_study_content{
     padding-top: 10pt;
@@ -79,13 +73,18 @@ header {
 
 }
 p{
-    font-size:1rem;
+    font-size:2rem;
     margin-bottom: 2rem;
+    font-size: .8rem;
 }
 l{
     font-size:0.5rem;
 }
-
+small {
+     display: inline-block;
+font-style: italic;
+line-height: 1.2 !important;
+}
 #hero p {
    font-size:1.5rem;
    line-height: 2rem;
@@ -125,14 +124,19 @@ h1{
     font-size:2.5rem;
    
 }
+hr{
+    border: 1px solid rgb(128, 128, 128);
+    margin-bottom: 2rem;
+}
 main h1{
     color:#333;
     padding:1rem;
 }
 main{
+    
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 80%;
 }
 #hero {
 
@@ -178,8 +182,15 @@ img {
 .details img {
     margin-bottom: 3rem;
 }
-
-
+.details{
+    width:60%;
+}
+.details h2{
+    text-align: center;
+    margin-left:auto;
+    margin-right:auto;
+    margin-bottom:2rem;
+}
 @media only screen and (max-width: 800px) {
     main{
         width: 80%;
@@ -220,3 +231,198 @@ img {
 .bi:hover {
     background-color: #e0e0e0;
 }
+
+.row {
+    display: flex;
+    gap: 2rem
+    
+  }
+  
+   .slime .row{
+    padding: 2rem;
+  }
+
+  .slime img {
+    margin-bottom: 1rem;
+  }
+
+  .column {
+    flex: 1;
+    
+  }
+
+  .left{
+    padding-right: 1rem;
+  }
+  .right{
+    color: #949494;
+    padding-left: 1rem;
+    text-align: right;
+    
+  }
+.table{
+    margin-left:auto;
+    margin-right:auto;
+}
+.table img{
+    margin:auto;
+}
+  .gray {
+    background-color: #f1f0f0;
+  
+    
+    
+
+  }
+ 
+  
+  
+
+
+  .portfolio {
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.project {
+    
+    display: flex;
+  text-align: center;
+    flex-wrap: wrap;
+    text-decoration: none;
+    color: inherit;
+    max-width: 1200px;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    align-items: center;
+    padding: 1rem;
+    
+}
+
+.project h2{
+    text-align: left;
+   
+    width: 100%;
+}
+.project-content {
+    text-align: left;
+    gap: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+}
+.project:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 16px 30px rgba(0, 0, 0, 0.05);
+}
+
+.project-text {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    
+   
+}
+
+.project-text h2 {
+    margin: 0;
+    font-size: 1.5rem;
+    color: #333;
+}
+p{
+    font-size:1rem;
+}
+.project-text p {
+    
+    font-size: .8rem;
+    color: #555;
+}
+
+.project-image {
+    
+    flex: 1;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+   
+
+padding-right: 2rem;
+    
+   
+   
+}
+
+.ui-pictures{
+    
+   
+    display: flex;
+    flex:1;
+    margin-bottom: 2rem;
+    align-items: flex-start;
+    
+    
+}
+
+em{
+font-weight: bold;
+font-style:normal;
+}
+
+picture_with_caption img{
+   
+    margin-bottom: 1rem;
+    width:60%;
+}
+
+
+
+section p {
+   
+    
+}
+
+#title p{
+    margin-bottom:0pt;
+}
+ul{
+    margin-bottom:2rem;
+    list-style-type: none;
+}
+
+@media (max-width: 768px) {
+    .project-content {
+        flex-direction: column;
+      
+    }
+
+    .project-text, .project-image {
+        flex: 1; /* Equal widths for stacked layout */
+        padding-left:0;
+    }
+
+    .project-image img {
+        width: 100%;
+    }
+
+    #two-column{
+        font-size:.5rem;
+
+    }
+   
+
+    section p {
+        width: 100%;
+       
+    }
+
+    .details{
+        width:100%;
+    }
+}
+
