--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ img {
     display: flex;
     flex-direction: column-reverse;
     color: #333;
-    align-items: center;
+    align-items: flex-start;
     gap: 1rem;
     border-bottom: 0.5px solid #bbb;
     padding-bottom: 0;
