--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,11 @@ header {
     margin: 0 auto;
 }
 
+header h1{
+    font-family: futura;
+    color: #ee3062;
+}
+
 .header-container {
     display: flex;
     justify-content: space-between;
@@ -91,9 +96,10 @@ nav ul li a {
 }
 
 #hero p {
-    font-size: 1.5rem;
-    line-height: 2rem;
+    font-size: 1rem;
+    line-height: 1.2rem;
 }
+
 
 /* Portfolio Section */
 .portfolio {
