--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 /* Body Styles */
 body {
     background-color: #FAF9F6;
-    font-family: 'Nunito', Arial, sans-serif;
+    font-family:  'Nunito',Arial, sans-serif;
     line-height: 1.3;
     margin: 0;
     padding: 0;
@@ -72,11 +72,7 @@ header {
     margin-right: auto;
 
 }
-p{
-    font-size:2rem;
-    margin-bottom: 2rem;
-    font-size: .8rem;
-}
+
 l{
     font-size:0.5rem;
 }
@@ -304,8 +300,9 @@ img {
 
 .project h2{
     text-align: left;
-   
+   font-size: 2.5rem;
     width: 100%;
+    color: #333;
 }
 .project-content {
     text-align: left;
@@ -315,7 +312,7 @@ img {
     margin-top: 2rem;
 }
 .project:hover {
-    transform: translateY(-5px);
+   
     box-shadow: 0 16px 30px rgba(0, 0, 0, 0.05);
     
    
@@ -325,13 +322,14 @@ img {
     flex: 1;
     display: flex;
     flex-direction: column;
+    padding-right:4rem;
     
    
 }
 
 .project-text h2 {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     color: #333;
 }
 p{
@@ -339,16 +337,17 @@ p{
 }
 #hero .project-text p,
 .project-text p {
-    
+    margin-bottom:1rem;
     font-size: 1rem;
     color: #555;
 }
 
-.project-text p.small {
+.small {
     display: inline-block;
-font-style: italic;
+font-weight: light;
 line-height: 1.2 !important;
-font-size: .6rem;
+font-size: .7rem;
+color:#949494
 }
 
 .project-image {
@@ -383,8 +382,10 @@ padding-right: 2rem;
 }
 
 em{
-font-weight: bold;
+font-weight: light;
 font-style:normal;
+color: #949494;
+font-size: .7rem;
 }
 
 picture_with_caption img{
@@ -395,10 +396,7 @@ picture_with_caption img{
 
 
 
-section p {
-   
-    
-}
+
 
 #title p{
     margin-bottom:0pt;
@@ -444,3 +442,46 @@ header h1{
     }
 }
 
+
+
+
+/* CSS */
+.button-24 {
+ 
+  border: 1px solid #555;
+ background-color: #FAF9F6;
+  
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+  /*box-sizing: border-box;*/
+  color: #555;
+  cursor: pointer;
+  display: inline-block;
+  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 1rem 2rem;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+  margin-bottom:1rem;
+}
+
+.button-24:hover,
+.button-24:active {
+  background-color: #555;
+  background-position: 0 0;
+  color: #FAF9F6;
+  ;
+}
+
+.button-24:active {
+  opacity: .5;
+}
