--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ img {
 }
 
 #hero {
+   
     display: flex;
     flex-direction: column-reverse;
     color: #333;
@@ -238,7 +239,13 @@ img {
   .slime img {
     margin-bottom: 1rem;
   }
+.progress img{
+    margin-bottom: .5rem;
+}
 
+.progress p{
+    margin-bottom: 3rem;
+}
   .column {
     flex: 1;
     
@@ -313,7 +320,7 @@ img {
 }
 .project:hover {
    
-    box-shadow: 0 16px 30px rgba(0, 0, 0, 0.05);
+   /* box-shadow: 0 16px 30px rgba(0, 0, 0, 0.05);*/
     
    
 }
