--- a/styles.css
+++ b/styles.css
@@ -495,3 +495,12 @@ header h1{
 .button-24:active {
   opacity: .5;
 }
+
+.castle-demo{
+display: flex;
+flex-direction: column;
+}
+
+#instructions{
+    display: flex;
+}
