caslte controls javascirpt

--- a/styles.css
+++ b/styles.css
@@ -503,4 +503,9 @@ flex-direction: column;
 
 #instructions{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 450px;
+
 }
